load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@cxx.rs//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")
load("@local_config_cuda//cuda:build_defs.bzl", "if_cuda")
load("//bazel:tachyon.bzl", "if_gpu_is_configured", "if_has_openmp_on_macos")
load("//bazel:tachyon_cc.bzl", "tachyon_cc_library", "tachyon_openmp_linkopts")
load("//bazel:tachyon_rust.bzl", "tachyon_rust_library", "tachyon_rust_test")

FEATURES = if_gpu_is_configured(["gpu"])

tachyon_rust_library(
    name = "sp1",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    crate_features = FEATURES,
    proc_macro_deps = all_crate_deps(proc_macro = True),
    deps = all_crate_deps(normal = True) + [
        ":baby_bear_poseidon2_cxx_bridge",
        ":baby_bear_poseidon2_duplex_challenger",
        "//tachyon/rs:tachyon_rs",
    ],
)

# NOTE(chokobole): This attribute could be added to `sp1_test`,
# but this approach doesn't work when compiling with nvcc.
# rustc_flags = if_has_openmp(["-lgomp"]),
cc_library(
    name = "openmp",
    linkopts = tachyon_openmp_linkopts(),
)

tachyon_rust_test(
    name = "sp1_test",
    size = "small",
    # NOTE(chokobole): Timeout time increased due to CI.
    timeout = "moderate",
    aliases = aliases(),
    crate = ":sp1",
    crate_features = FEATURES,
    data = ["src/tests/fibonacci/elf/riscv32im-succinct-zkvm-elf"],
    proc_macro_deps = all_crate_deps(proc_macro_dev = True),
    deps = all_crate_deps(normal_dev = True) + [
        ":openmp",
        "@local_config_gmp//:gmp",
    ] + if_cuda([
        "@local_config_cuda//cuda:cudart_static",
    ]) + if_has_openmp_on_macos([
        "@local_config_omp//:omp",
    ]),
)

rust_cxx_bridge(
    name = "baby_bear_poseidon2_cxx_bridge",
    src = "src/baby_bear_poseidon2.rs",
    args = if_gpu_is_configured([
        '--cfg=feature="gpu"',
    ]),
    deps = [":baby_bear_poseidon2_api_hdrs"],
)

tachyon_cc_library(
    name = "baby_bear_poseidon2_api_hdrs",
    hdrs = ["include/baby_bear_poseidon2_duplex_challenger.h"],
    deps = [
        "//tachyon/c/zk/air/sp1:baby_bear_poseidon2_duplex_challenger",
        "@cxx.rs//:core",
    ],
)

tachyon_cc_library(
    name = "baby_bear_poseidon2_duplex_challenger",
    srcs = ["src/baby_bear_poseidon2_duplex_challenger.cc"],
    deps = [
        ":baby_bear_poseidon2_api_hdrs",
        ":baby_bear_poseidon2_cxx_bridge/include",
    ],
)
