[package]
name = "tachyon_sp1"
version = "0.0.1"
authors = ["The Tachyon Authors <tachyon-discuss@kroma.network>"]
edition = "2021"
rust-version = "1.56.1"
description = """
SP1 unittest based on tachyon
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/kroma-network/tachyon"
readme = "README.md"
categories = ["cryptography"]
keywords = ["tachyon", "sp1", "proofs", "zkp", "zkSNARKs"]
publish = false

[dependencies]
anyhow = "1.0.83"
cxx = "1.0"
p3-challenger = "0.1.3-succinct"
p3-commit = "0.1.3-succinct"
p3-dft = "0.1.3-succinct"
p3-field = "0.1.3-succinct"
p3-fri = "0.1.3-succinct"
p3-matrix = "0.1.3-succinct"
p3-maybe-rayon = "0.1.3-succinct"
p3-util = "0.1.3-succinct"
sp1-core = { git = "https://github.com/kroma-network/sp1.git", rev = "dd032eb" }
sp1-prover = { git = "https://github.com/kroma-network/sp1.git", rev = "dd032eb" }
tachyon_rs = { path = "../../tachyon/rs" }

[dev-dependencies]

[features]
default = []
gpu = []
