[package]
name = "tachyon_sp1"
version = "0.0.1"
authors = ["The Tachyon Authors <tachyon-discuss@kroma.network>"]
edition = "2021"
rust-version = "1.56.1"
description = """
SP1 unittest based on tachyon
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/kroma-network/tachyon"
readme = "README.md"
categories = ["cryptography"]
keywords = ["tachyon", "sp1", "proofs", "zkp", "zkSNARKs"]
publish = false

[dependencies]
anyhow = "1.0.83"
bincode = "1.3.3"
cxx = "1.0"
itertools = "0.13.0"
p3-baby-bear = "0.1.3-succinct"
p3-challenger = "0.1.3-succinct"
p3-commit = "0.1.3-succinct"
p3-dft = "0.1.3-succinct"
p3-field = "0.1.3-succinct"
p3-fri = "0.1.3-succinct"
p3-matrix = "0.1.3-succinct"
p3-maybe-rayon = "0.1.3-succinct"
p3-poseidon2 = "0.1.3-succinct"
p3-symmetric = "0.1.3-succinct"
p3-util = "0.1.3-succinct"
serde = { version = "1.0", default-features = false, features = [
  "derive",
  "alloc",
] }
serde_bytes = "0.11.14"
sp1-core = { git = "https://github.com/kroma-network/sp1.git", rev = "dd032eb" }
sp1-recursion-core = { git = "https://github.com/kroma-network/sp1.git", rev = "dd032eb" }
sp1-recursion-compiler = { git = "https://github.com/kroma-network/sp1.git", rev = "dd032eb" }
sp1-recursion-program = { git = "https://github.com/kroma-network/sp1.git", rev = "dd032eb" }
tracing = "0.1.37"
tachyon_rs = { path = "../../tachyon/rs" }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[features]
default = []
gpu = []
